--- a/Section-04c-01_JavaTutorial_MavenProject/Jenkinsfile
+++ b/Section-04c-01_JavaTutorial_MavenProject/Jenkinsfile
@@ -2,13 +2,22 @@ pipeline {
     agent any
     stages {
         stage('Clean') {
-           bat 'mvn clean'
+        	steps {
+	           bat 'mvn clean' 
+	        }
+           
         }
         stage('Test') {
-           bat 'mvn test'
+        	steps {
+	            bat 'mvn test' 
+	        }
+          
         }
         stage('Package') {
-           bat 'mvn package'
+        	steps {
+	            bat 'mvn package'
+	        }
+           
         }
     }
 }
