Update Jenkinsfile - 2nd

--- a/Section-04c-01_JavaTutorial_MavenProject/Jenkinsfile
+++ b/Section-04c-01_JavaTutorial_MavenProject/Jenkinsfile
@@ -3,7 +3,8 @@ pipeline {
     stages {
         stage('Clean') {
         	steps {
-	           bat 'mvn clean' 
+        		bat 'cd Section-04c-01_JavaTutorial_MavenProject'
+	           	bat 'mvn clean' 
 	        }
            
         }
