Update Jenkinsfile - 3rd

--- a/Section-04c-01_JavaTutorial_MavenProject/Jenkinsfile
+++ b/Section-04c-01_JavaTutorial_MavenProject/Jenkinsfile
@@ -3,8 +3,7 @@ pipeline {
     stages {
         stage('Clean') {
         	steps {
-        		bat 'cd Section-04c-01_JavaTutorial_MavenProject'
-	           	bat 'mvn clean' 
+	           	bat 'Section-04c-01_JavaTutorial_MavenProject\\mvn clean' 
 	        }
            
         }
