Update Jenkinsfile - 4th

--- a/Section-04c-01_JavaTutorial_MavenProject/Jenkinsfile
+++ b/Section-04c-01_JavaTutorial_MavenProject/Jenkinsfile
@@ -1,9 +1,12 @@
 pipeline {
     agent any
+    environment {
+    	def pom = readMavenPom file: 'Section-04c-01_JavaTutorial_MavenProject\\pom.xml'
+    }
     stages {
         stage('Clean') {
         	steps {
-	           	bat 'Section-04c-01_JavaTutorial_MavenProject\\mvn clean' 
+	           	bat 'mvn -f Section-04c-01_JavaTutorial_MavenProject clean'
 	        }
            
         }
